--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ MarkupSafe==2.1.1
 PyPDF2==2.10.5
 SQLAlchemy==1.4.41
 Werkzeug==2.2.2
-certifi	2022.6.15
+certifi==2022.6.15
 charset-normalizer==3.0.0b2
 click==8.1.3
 colorama==0.4.5
