--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ et-xmlfile==1.1.0
 greenlet==2.0.0a2
 idna==3.3
 itsdangerous==2.1.2
+gunicorn==20.1.0
 numpy==1.23.2
 openpyxl==3.0.10
 pandas==1.4.3
