--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ greenlet==2.0.0a2
 idna==3.3
 itsdangerous==2.1.2
 gunicorn==20.1.0
+psycopg2-binary==2.9.3
 numpy==1.23.2
 openpyxl==3.0.10
 pandas==1.4.3
