--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
 Flask==2.2.2
 Flask-Login==0.6.2
-Flask-SQLAlchemy==2.5.1
+Flask-SQLAlchemy==2.4.4
+Flask-Bootstrap==3.3.7.1
 Jinja2==3.1.2
-MarkupSafe==2.1.1
+MarkupSafe==1.1.1
 PyPDF2==2.10.5
-SQLAlchemy==1.4.41
+SQLAlchemy==1.3.19
 Werkzeug==2.2.2
-certifi==2022.6.15
+certifi==2020.6.20
 charset-normalizer==2.1.1
-click==8.1.3
+chardet==3.0.4
+click==7.1.2
+dominate==2.5.2
 colorama==0.4.5
 et-xmlfile==1.1.0
 greenlet==2.0.0a2
 idna==3.3
 itsdangerous==2.1.2
 gunicorn==20.1.0
-numpy==1.23.2
+psycopg2-binary==2.9.3
 openpyxl==3.0.10
-pandas==1.4.3
-pandas-stubs==1.4.3.220815
 pip==22.2.2
 python-dateutil==2.8.2
 pytz==2022.2.1
