--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,36 @@
-Flask==1.1.2
-Flask-Login==0.6.2
-Flask-SQLAlchemy==2.4.4
-Flask-Bootstrap==3.3.7.1
-Jinja2==3.1.2
-MarkupSafe==1.1.1
-PyPDF2==2.10.5
-SQLAlchemy==1.3.19
-Werkzeug==2.2.2
+gunicorn==20.1.0
+psycopg2-binary==2.9.3
 certifi==2020.6.20
-charset-normalizer==2.1.1
 chardet==3.0.4
 click==7.1.2
 dominate==2.5.2
+email-validator==1.2.1
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+requests==2.24.0
+SQLAlchemy==1.3.19
+urllib3==1.25.10
+visitor==0.1.3
+Werkzeug==1.0.1
+WTForms==2.3.3
+PyPDF2==2.10.5
+charset-normalizer==2.1.1
 colorama==0.4.5
 et-xmlfile==1.1.0
 greenlet==2.0.0a2
 idna==3.3
-itsdangerous==2.1.2
-gunicorn==20.1.0
-psycopg2-binary==2.9.3
 openpyxl==3.0.10
-pip==22.2.2
 python-dateutil==2.8.2
 pytz==2022.2.1
-requests==2.28.1
 setuptools==65.0.2
 six==1.16.0
 tqdm==4.64.0
 types-pytz==2022.1.2
-urllib3==1.26.11
 wheel==0.37.1
