--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ chardet==3.0.4
 click==7.1.2
 dominate==2.5.2
 email-validator==1.2.1
-Flask==1.1.2
+flask>=2.2.5
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
